# lasagna

./: .gitignore  ARCHITECHTURE.md  Cargo.toml  README.md  pik.json
roots/: 0.pem
src/: block.rs  blockchain.rs  blockchain_actor.rs  cli.rs  client.rs  clock_watch.rs  draw.rs  ledger.rs  lib.rs  main.rs  network_actor.rs  seeding_mechanism.rs  transaction.rs
src/pippi/: connectionmap.rs  flooding_set_actor.rs  heartbeat.rs  message_handling.rs  mod.rs  network_analysis.rs  peer.rs  peerset.rs  reading_actor.rs  writing_actor.rs
wallets/: bob.pem
