[package]
name = "lassecoin"
version = "0.1.0"
edition = "2021"

[features]
small_key = []
heavy_test = []
unchecked = []
always_win = []

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["sync", "io-util", "rt", "macros", "rt-multi-thread", "time", "net"] }
rsa = { git = "https://github.com/LWEdslev/RSA", branch = "master", features = ["serde", "sha2"]}
uuid = { version = "1.8.0", features = ["v4", "serde"] }
num-bigint = {version = "0.4.4", features = ["serde"] }
thiserror = "1.0.58"
