[package]
name = "lasagna"
version = "0.1.0"
edition = "2021"
default-run = "regular"

[features]
small_key = []
heavy_test = []
unchecked = []
always_win = []
max_timeslot = []

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["sync", "io-util", "rt", "macros", "rt-multi-thread", "time", "net", "io-std", "signal"] }
rsa = { git = "https://github.com/LWEdslev/RSA", branch = "master", features = ["serde", "sha2"]}
uuid = { version = "1.8.0", features = ["v4", "serde"] }
num-bigint = {version = "0.4.4", features = ["serde"] }
thiserror = "1.0.58"
tiny-bip39 = "1.0.0"
arrayref = "0.3.7"
rand_chacha = "0.3.1"
clap = {version = "4.5.4", features = ["derive"]}
lazy_static = "1.4.0"
bincode = "1.3.3"
